// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleContainer Component 200 status code should render correctly for news 1`] = `
<PageWrapper
  bbcOrigin="https://www.bbc.co.uk"
  data={
    Object {
      "content": Object {
        "model": Object {
          "blocks": Array [
            Object {
              "model": Object {
                "blocks": Array [
                  Object {
                    "model": Object {
                      "blocks": Array [
                        Object {
                          "model": Object {
                            "blocks": Array [
                              Object {
                                "model": Object {
                                  "attributes": Array [],
                                  "text": "Article Headline",
                                },
                                "type": "fragment",
                              },
                            ],
                            "text": "Article Headline",
                          },
                          "type": "paragraph",
                        },
                      ],
                    },
                    "type": "text",
                  },
                ],
              },
              "type": "headline",
            },
            Object {
              "model": Object {
                "blocks": Array [
                  Object {
                    "model": Object {
                      "blocks": Array [
                        Object {
                          "model": Object {
                            "attributes": Array [],
                            "text": "A paragraph.",
                          },
                          "type": "fragment",
                        },
                      ],
                      "text": "A paragraph.",
                    },
                    "type": "paragraph",
                  },
                ],
              },
              "type": "text",
            },
          ],
        },
      },
      "metadata": Object {
        "created": 1514808060000,
        "createdBy": "News",
        "firstPublished": 1514808060000,
        "id": "urn:bbc:ares::article:c0000000001o",
        "lastPublished": 1514811600000,
        "lastUpdated": 1514815200000,
        "locators": Object {
          "optimoUrn": "urn:bbc:optimo:asset:c0000000001o",
        },
        "passport": Object {
          "category": "news",
          "genre": null,
          "home": "http://www.bbc.co.uk/ontologies/passport/home/News",
          "language": "en-gb",
        },
        "tags": Object {
          "about": Array [
            Object {
              "curationType": Array [
                "vivo-stream",
              ],
              "thingId": "2351f2b2-ce36-4f44-996d-c3c4f7f90eaa",
              "thingLabel": "Royal Wedding 2018",
              "thingType": Array [
                "Thing",
                "Event",
              ],
              "thingUri": "http://www.bbc.co.uk/things/2351f2b2-ce36-4f44-996d-c3c4f7f90eaa#id",
              "topicId": "cpwpy79d6dxt",
              "topicName": "Royal Wedding 2018",
            },
          ],
          "mentions": Array [
            Object {
              "thingId": "1efbf3e5-b330-49a1-b531-b507ab027c96",
              "thingLabel": "Queen Victoria",
              "thingType": Array [
                "Person",
                "Thing",
              ],
              "thingUri": "http://www.bbc.co.uk/things/1efbf3e5-b330-49a1-b531-b507ab027c96#id",
            },
          ],
        },
        "type": "article",
      },
      "promo": Object {
        "headlines": Object {
          "promoHeadline": "Article Headline for Promo",
          "seoHeadline": "Article Headline for SEO",
        },
        "id": "urn:bbc:ares::article:c0000000001o",
        "locators": Object {
          "optimoUrn": "urn:bbc:optimo:asset:c0000000001o",
        },
        "summary": "Article summary.",
        "timestamp": 1514811600000,
      },
    }
  }
  error={null}
  isAmp={false}
  loading={false}
  service="news"
  status={200}
>
  <LoadingContainer
    bbcOrigin="https://www.bbc.co.uk"
    data={
      Object {
        "content": Object {
          "model": Object {
            "blocks": Array [
              Object {
                "model": Object {
                  "blocks": Array [
                    Object {
                      "model": Object {
                        "blocks": Array [
                          Object {
                            "model": Object {
                              "blocks": Array [
                                Object {
                                  "model": Object {
                                    "attributes": Array [],
                                    "text": "Article Headline",
                                  },
                                  "type": "fragment",
                                },
                              ],
                              "text": "Article Headline",
                            },
                            "type": "paragraph",
                          },
                        ],
                      },
                      "type": "text",
                    },
                  ],
                },
                "type": "headline",
              },
              Object {
                "model": Object {
                  "blocks": Array [
                    Object {
                      "model": Object {
                        "blocks": Array [
                          Object {
                            "model": Object {
                              "attributes": Array [],
                              "text": "A paragraph.",
                            },
                            "type": "fragment",
                          },
                        ],
                        "text": "A paragraph.",
                      },
                      "type": "paragraph",
                    },
                  ],
                },
                "type": "text",
              },
            ],
          },
        },
        "metadata": Object {
          "created": 1514808060000,
          "createdBy": "News",
          "firstPublished": 1514808060000,
          "id": "urn:bbc:ares::article:c0000000001o",
          "lastPublished": 1514811600000,
          "lastUpdated": 1514815200000,
          "locators": Object {
            "optimoUrn": "urn:bbc:optimo:asset:c0000000001o",
          },
          "passport": Object {
            "category": "news",
            "genre": null,
            "home": "http://www.bbc.co.uk/ontologies/passport/home/News",
            "language": "en-gb",
          },
          "tags": Object {
            "about": Array [
              Object {
                "curationType": Array [
                  "vivo-stream",
                ],
                "thingId": "2351f2b2-ce36-4f44-996d-c3c4f7f90eaa",
                "thingLabel": "Royal Wedding 2018",
                "thingType": Array [
                  "Thing",
                  "Event",
                ],
                "thingUri": "http://www.bbc.co.uk/things/2351f2b2-ce36-4f44-996d-c3c4f7f90eaa#id",
                "topicId": "cpwpy79d6dxt",
                "topicName": "Royal Wedding 2018",
              },
            ],
            "mentions": Array [
              Object {
                "thingId": "1efbf3e5-b330-49a1-b531-b507ab027c96",
                "thingLabel": "Queen Victoria",
                "thingType": Array [
                  "Person",
                  "Thing",
                ],
                "thingUri": "http://www.bbc.co.uk/things/1efbf3e5-b330-49a1-b531-b507ab027c96#id",
              },
            ],
          },
          "type": "article",
        },
        "promo": Object {
          "headlines": Object {
            "promoHeadline": "Article Headline for Promo",
            "seoHeadline": "Article Headline for SEO",
          },
          "id": "urn:bbc:ares::article:c0000000001o",
          "locators": Object {
            "optimoUrn": "urn:bbc:optimo:asset:c0000000001o",
          },
          "summary": "Article summary.",
          "timestamp": 1514811600000,
        },
      }
    }
    error={null}
    isAmp={false}
    loading={false}
    service="news"
    status={200}
  />
</PageWrapper>
`;

exports[`ArticleContainer Component 200 status code should render correctly for persian 1`] = `
<PageWrapper
  bbcOrigin="https://www.bbc.co.uk"
  data={
    Object {
      "data": Object {
        "content": Object {
          "model": Object {
            "blocks": Array [
              Object {
                "model": Object {
                  "blocks": Array [
                    Object {
                      "model": Object {
                        "blocks": Array [
                          Object {
                            "model": Object {
                              "blocks": Array [
                                Object {
                                  "model": Object {
                                    "attributes": Array [],
                                    "text": "سرصفحه مقاله",
                                  },
                                  "type": "fragment",
                                },
                              ],
                              "text": "سرصفحه مقاله",
                            },
                            "type": "paragraph",
                          },
                        ],
                      },
                      "type": "text",
                    },
                  ],
                },
                "type": "headline",
              },
              Object {
                "model": Object {
                  "blocks": Array [
                    Object {
                      "model": Object {
                        "blocks": Array [
                          Object {
                            "model": Object {
                              "attributes": Array [],
                              "text": "یک پاراگراف.",
                            },
                            "type": "fragment",
                          },
                        ],
                        "text": "یک پاراگراف.",
                      },
                      "type": "paragraph",
                    },
                  ],
                },
                "type": "text",
              },
            ],
          },
        },
        "metadata": Object {
          "created": 1514808060000,
          "createdBy": "Persian",
          "firstPublished": 1514808060000,
          "id": "urn:bbc:ares::article:cyddjz5058wo",
          "lastPublished": 1514811600000,
          "lastUpdated": 1514815200000,
          "locators": Object {
            "optimoUrn": "urn:bbc:optimo:asset:cyddjz5058wo",
          },
          "passport": Object {
            "category": "news",
            "genre": null,
            "home": "http://www.bbc.co.uk/ontologies/passport/home/Persian",
            "language": "fa",
          },
          "tags": Object {
            "about": null,
            "mentions": null,
          },
          "type": "article",
        },
        "promo": Object {
          "headlines": Object {
            "promoHeadline": "سرصفحه مقاله برای ارتقاء",
            "seoHeadline": "سرصفحه مقاله",
          },
          "id": "urn:bbc:ares::article:cyddjz5058wo",
          "locators": Object {
            "optimoUrn": "urn:bbc:optimo:asset:cyddjz5058wo",
          },
          "summary": "خلاصه مقاله",
          "timestamp": 1514811600000,
        },
      },
      "isAmp": false,
      "service": "persian",
      "status": 200,
    }
  }
  isAmp={false}
  service="news"
>
  <LoadingContainer
    bbcOrigin="https://www.bbc.co.uk"
    data={
      Object {
        "data": Object {
          "content": Object {
            "model": Object {
              "blocks": Array [
                Object {
                  "model": Object {
                    "blocks": Array [
                      Object {
                        "model": Object {
                          "blocks": Array [
                            Object {
                              "model": Object {
                                "blocks": Array [
                                  Object {
                                    "model": Object {
                                      "attributes": Array [],
                                      "text": "سرصفحه مقاله",
                                    },
                                    "type": "fragment",
                                  },
                                ],
                                "text": "سرصفحه مقاله",
                              },
                              "type": "paragraph",
                            },
                          ],
                        },
                        "type": "text",
                      },
                    ],
                  },
                  "type": "headline",
                },
                Object {
                  "model": Object {
                    "blocks": Array [
                      Object {
                        "model": Object {
                          "blocks": Array [
                            Object {
                              "model": Object {
                                "attributes": Array [],
                                "text": "یک پاراگراف.",
                              },
                              "type": "fragment",
                            },
                          ],
                          "text": "یک پاراگراف.",
                        },
                        "type": "paragraph",
                      },
                    ],
                  },
                  "type": "text",
                },
              ],
            },
          },
          "metadata": Object {
            "created": 1514808060000,
            "createdBy": "Persian",
            "firstPublished": 1514808060000,
            "id": "urn:bbc:ares::article:cyddjz5058wo",
            "lastPublished": 1514811600000,
            "lastUpdated": 1514815200000,
            "locators": Object {
              "optimoUrn": "urn:bbc:optimo:asset:cyddjz5058wo",
            },
            "passport": Object {
              "category": "news",
              "genre": null,
              "home": "http://www.bbc.co.uk/ontologies/passport/home/Persian",
              "language": "fa",
            },
            "tags": Object {
              "about": null,
              "mentions": null,
            },
            "type": "article",
          },
          "promo": Object {
            "headlines": Object {
              "promoHeadline": "سرصفحه مقاله برای ارتقاء",
              "seoHeadline": "سرصفحه مقاله",
            },
            "id": "urn:bbc:ares::article:cyddjz5058wo",
            "locators": Object {
              "optimoUrn": "urn:bbc:optimo:asset:cyddjz5058wo",
            },
            "summary": "خلاصه مقاله",
            "timestamp": 1514811600000,
          },
        },
        "isAmp": false,
        "service": "persian",
        "status": 200,
      }
    }
    loading={false}
  />
</PageWrapper>
`;

exports[`ArticleContainer Component error state should render correctly 1`] = `
<PageWrapper
  bbcOrigin="https://www.bbc.co.uk"
  error={true}
  isAmp={false}
  service="news"
>
  <LoadingContainer
    error={true}
    loading={false}
  />
</PageWrapper>
`;

exports[`ArticleContainer Component loading state should render correctly 1`] = `
<PageWrapper
  bbcOrigin="https://www.bbc.co.uk"
  error={null}
  isAmp={false}
  loading={true}
  service="news"
  status={200}
>
  <LoadingContainer
    error={null}
    isAmp={false}
    loading={true}
    service="news"
    status={200}
  />
</PageWrapper>
`;

exports[`ArticleContainer Component no data or bbcOrigin should render correctly 1`] = `
<PageWrapper
  bbcOrigin="https://www.bbc.co.uk"
  error={true}
  isAmp={false}
  service="news"
>
  <LoadingContainer
    error={true}
    loading={false}
  />
</PageWrapper>
`;

exports[`ArticleContainer Component non-200 status code should render correctly 1`] = `
<PageWrapper
  bbcOrigin="https://www.bbc.co.uk"
  data={
    Object {
      "data": undefined,
      "isAmp": false,
      "service": "news",
      "status": 451,
    }
  }
  isAmp={false}
  service="news"
>
  <LoadingContainer
    bbcOrigin="https://www.bbc.co.uk"
    data={
      Object {
        "data": undefined,
        "isAmp": false,
        "service": "news",
        "status": 451,
      }
    }
    loading={false}
  />
</PageWrapper>
`;
